--- a/.github/workflows/cli-commander-fake-names-generator.yaml
+++ b/.github/workflows/cli-commander-fake-names-generator.yaml
@@ -7,9 +7,9 @@ on:
   pull_request:
     paths:
       - 'cli/commander/fake-names-generator/**'
-  schedule:
+  #schedule:
     # Every day at 1am
-    - cron:  '0 1 * * *'
+    #- cron:  '0 1 * * *'
 
 jobs:
   build:
