--- a/.github/workflows/cli-yargs-countentriesindirectory.yaml
+++ b/.github/workflows/cli-yargs-countentriesindirectory.yaml
@@ -7,9 +7,9 @@ on:
   pull_request:
     paths:
       - 'cli/yargs/countEntriesInDirectory/**'
-  schedule:
+  #schedule:
     # Every day at 1am
-    - cron:  '0 1 * * *'
+    #- cron:  '0 1 * * *'
 
 jobs:
   build:
