--- a/.github/workflows/servers-express-api-with-express-and-handlebars.yaml
+++ b/.github/workflows/servers-express-api-with-express-and-handlebars.yaml
@@ -7,9 +7,9 @@ on:
   pull_request:
     paths:
       - 'servers/express/api-with-express-and-handlebars/**'
-  schedule:
+  #schedule:
     # Every day at 1am
-    - cron: '0 1 * * *'
+    #- cron: '0 1 * * *'
 
 jobs:
   build:
